# Backend/src/validators/scheduleValidator.js
@@ -2,13 +2,35 @@ import Joi from "joi";
 
 export const validateCreateSchedule = (req, res, next) => {
   const schema = Joi.object({
-    //user_id: Joi.number().integer().required(),
-    title: Joi.string().min(3).max(100).required(),
-    description: Joi.string().min(5).max(1000).required(),
-    date: Joi.date().iso().required(), // Format YYYY-MM-DD
+    title: Joi.string().min(3).max(100).required().messages({
+      "string.base": "Judul harus berupa teks.",
+      "string.empty": "Judul tidak boleh kosong.",
+      "string.min": "Judul harus memiliki setidaknya {#limit} karakter.",
+      "string.max": "Judul tidak boleh melebihi {#limit} karakter.",
+      "any.required": "Judul wajib diisi.",
+    }),
+    description: Joi.string().min(3).max(200).required().messages({
+      "string.base": "Deskripsi harus berupa teks.",
+      "string.empty": "Deskripsi tidak boleh kosong.",
+      "string.min": "Deskripsi harus memiliki setidaknya {#limit} karakter.",
+      "string.max": "Deskripsi tidak boleh melebihi {#limit} karakter.",
+      "any.required": "Deskripsi wajib diisi.",
+    }),
+    date: Joi.date().iso().required().messages({
+      "date.base": "Tanggal harus berupa tanggal yang valid.",
+      "date.iso": "Format tanggal tidak valid (gunakan YYYY-MM-DD).",
+      "date.empty": "Tanggal tidak boleh kosong",
+      "any.required": "Tanggal wajib diisi.",
+    }),
     time: Joi.string()
       .pattern(/^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$/)
-      .optional(), // Format HH:MM
+      .required()
+      .messages({
+        "string.base": "Waktu harus berupa teks.",
+        "string.empty": "Waktu tidak boleh kosong.",
+        "string.pattern.base": "Format waktu tidak valid (gunakan HH:MM).",
+        "any.required": "Waktu wajib diisi.",
+      }),
   });
   const { error } = schema.validate(req.body);
   if (error) return res.status(400).json({ message: error.details[0].message });
@@ -17,14 +39,41 @@ export const validateCreateSchedule = (req, res, next) => {
 
 export const validateUpdateSchedule = (req, res, next) => {
   const schema = Joi.object({
-    //user_id: Joi.number().integer().optional(),
-    title: Joi.string().min(3).max(100).required(),
-    description: Joi.string().min(5).max(1000).required(),
-    date: Joi.date().iso().required(),
+    title: Joi.string().min(3).max(100).required().messages({
+      "string.base": "Deskripsi harus berupa teks.",
+      "string.empty": "Deskripsi tidak boleh kosong.",
+      "string.min": "Deskripsi harus memiliki setidaknya {#limit} karakter.",
+      "string.max": "Deskripsi tidak boleh melebihi {#limit} karakter.",
+      "any.required": "Deskripsi wajib diisi.",
+    }),
+    description: Joi.string().min(5).max(1000).required().messages({
+      "string.base": "Deskripsi harus berupa teks.",
+      "string.empty": "Deskripsi tidak boleh kosong.",
+      "string.min": "Deskripsi harus memiliki setidaknya {#limit} karakter.",
+      "string.max": "Deskripsi tidak boleh melebihi {#limit} karakter.",
+      "any.required": "Deskripsi wajib diisi.",
+    }),
+    date: Joi.date().iso().required().messages({
+      "date.base": "Tanggal harus berupa tanggal yang valid.",
+      "date.iso": "Format tanggal tidak valid (gunakan YYYY-MM-DD).",
+      "date.empty": "Tanggal tidak boleh kosong",
+      "any.required": "Tanggal wajib diisi.",
+    }),
     time: Joi.string()
       .pattern(/^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$/)
-      .required(),
-  }).min(1); // Setidaknya satu field harus ada untuk update
+      .required()
+      .messages({
+        "string.base": "Waktu harus berupa teks.",
+        "string.empty": "Waktu tidak boleh kosong.",
+        "string.pattern.base": "Format waktu tidak valid (gunakan HH:MM).",
+        "any.required": "Waktu wajib diisi.",
+      }),
+  })
+    .min(1)
+    .messages({
+      "object.min":
+        "Setidaknya satu field harus disediakan untuk pembaruan jadwal.",
+    });
   const { error } = schema.validate(req.body);
   if (error) return res.status(400).json({ message: error.details[0].message });
   next();
